# win_event_engine

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.media_automation.toml.example  config.toml.example  rules.toml.example
.github/workflows/: release.yml
actions/: Cargo.toml
actions/src/: lib.rs  script_action.rs
bus/: Cargo.toml
bus/src/: lib.rs
docs/: Architecture.md  Configuration-Reference.md  Event-Types.md  Home.md  Lua-Scripting-API.md  Troubleshooting.md  Web-Dashboard.md
engine/: Cargo.toml
engine/src/: config.rs  engine.rs  integration_tests.rs  main.rs  service.rs
engine/src/plugins/: file_watcher.rs  mod.rs  process_monitor.rs  registry_monitor.rs  window_watcher.rs
engine_core/: Cargo.toml
engine_core/src/: event.rs  lib.rs  plugin.rs
metrics/: Cargo.toml
metrics/src/: lib.rs  server.rs
plugins/actions/: backup.lua  log_rotate.lua  test_example.lua  webhook.lua
rules/: Cargo.toml
rules/src/: lib.rs
