[package]
name = "metrics"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
